@@ -18,15 +18,18 @@ package org.jkiss.dbeaver.model.sql.semantics;
 
 import org.antlr.v4.runtime.misc.Interval;
 import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.lsm.sql.impl.syntax.SQLStandardParser;
 import org.jkiss.dbeaver.model.sql.semantics.model.dml.SQLQuerySelectIntoModel;
 import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueExpression;
+import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueFlattenedExpression;
 import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueTupleReferenceExpression;
 import org.jkiss.dbeaver.model.sql.semantics.model.select.*;
 import org.jkiss.dbeaver.model.stm.STMKnownRuleNames;
 import org.jkiss.dbeaver.model.stm.STMTreeNode;
 import org.jkiss.dbeaver.model.stm.STMTreeTermNode;
+import org.jkiss.dbeaver.model.stm.STMUtils;
 
 import java.util.*;
 
@@ -88,7 +91,6 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
 
                 STMTreeNode withNode = n.findFirstChildOfName(STMKnownRuleNames.withClause);
                 if (withNode != null) {
-                    boolean isRecursive = withNode.findFirstChildOfName(STMKnownRuleNames.RECURSIVE_TERM) != null;
                     List<SQLQueryRowsCteSubqueryModel> cteSubqueries = new ArrayList<>();
 
                     STMTreeNode cteListNode = withNode.findLastChildOfName(STMKnownRuleNames.cteList);
@@ -106,12 +108,30 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                                 : r.collectColumnNameList(columnListNode);
 
                             SQLQueryRowsSourceModel subquerySource = subsources.getOrEmpty(cteSubqueryNode);
-                            cteSubqueries.add(new SQLQueryRowsCteSubqueryModel(cteSubqueryNode, subqueryName, columnList, subquerySource));
+                            SQLQueryLexicalScope subqueryTailScope = null;
+
+                            STMTreeNode subqueryNode = cteSubqueryNode.findLastChildOfName(STMKnownRuleNames.subquery);
+                            if (subqueryNode != null){
+                                STMTreeNode subqueryTrailingNode = subqueryNode.findLastChildOfName(STMKnownRuleNames.RIGHT_PAREN_TERM);
+                                if (subqueryTrailingNode != null) {
+                                    subqueryTailScope = new SQLQueryLexicalScope();
+                                    subqueryTailScope.setInterval(
+                                        Interval.of(subquerySource.getInterval().b + 1, subqueryTrailingNode.getRealInterval().a - 1)
+                                    );
+                                }
+                            }
+                            cteSubqueries.add(new SQLQueryRowsCteSubqueryModel(
+                                cteSubqueryNode,
+                                subqueryName,
+                                columnList,
+                                subquerySource,
+                                subqueryTailScope
+                            ));
                         }
                     }
-                    return new SQLQueryRowsCteModel(n, isRecursive, cteSubqueries, resultQuery);
+                    return new SQLQueryRowsCteModel(n, cteSubqueries, resultQuery);
                 } else {
-                    return new SQLQueryRowsCteModel(n, false, Collections.emptyList(), resultQuery);
+                    return new SQLQueryRowsCteModel(n, Collections.emptyList(), resultQuery);
                 }
             }
         },
@@ -170,7 +190,12 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                 for (STMTreeNode childNode : childNodes.subList(1, childNodes.size())) {
                     if (!(childNode instanceof STMTreeTermNode)) {
                         final SQLQueryRowsSourceModel currSource = source;
-                        final SQLQueryRowsSourceModel nextSource = subsources.getOrEmpty(childNode);
+                        final SQLQueryRowsSourceModel nextSource = subsources.getOrNull(childNode);
+                        STMTreeNode lastTermChild = nextSource != null ? null : STMUtils.expandTerms(childNode).getLast();
+                        SQLQueryLexicalScope rightTableScope = lastTermChild == null ? null : new SQLQueryLexicalScope();
+                        if (lastTermChild != null) {
+                            rightTableScope.setInterval(Interval.of(lastTermChild.getRealInterval().b + 1, Integer.MAX_VALUE));
+                        }
                         // TODO see second case of the first source if parens are correctly ignored here
                         Interval range = Interval.of(n.getRealInterval().a, childNode.getRealInterval().b);
                         boolean isLateral = childNode.findFirstChildOfName(STMKnownRuleNames.LATERAL_TERM) != null;
@@ -186,14 +211,14 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                                                 .filter(cn -> cn instanceof STMTreeTermNode) // after the whitespace following the inclusive end position
                                                 .ifPresent(kw -> condScope.lexicalScope.setInterval(Interval.of(kw.getRealInterval().b + 2, Integer.MAX_VALUE)));
                                             yield joinConditionNode.map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.searchCondition))
-                                                .map(r::collectValueExpression)
+                                                .map(cn -> r.collectValueExpression(cn, condScope.lexicalScope))
                                                 .map(e -> new SQLQueryRowsNaturalJoinModel(
-                                                    range, childNode, currSource, nextSource, isLateral,
+                                                    range, childNode, currSource, nextSource, rightTableScope, isLateral,
                                                     e, condScope.lexicalScope
                                                 ))
                                                 .orElseGet(() -> new SQLQueryRowsNaturalJoinModel(
-                                                    range, childNode, currSource, nextSource, isLateral,
-                                                    Collections.emptyList(), condScope.lexicalScope
+                                                    range, childNode, currSource, nextSource, rightTableScope, isLateral,
+                                                    (SQLQueryValueExpression) null, condScope.lexicalScope
                                                 ));
                                         } else {
                                             Optional<STMTreeNode> columnsSpecNode = joinSpecificationNode
@@ -206,7 +231,7 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                                                 .map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.LEFT_PAREN_TERM))
                                                 .ifPresent(cn -> condScope.lexicalScope.setInterval(Interval.of(cn.getRealInterval().b + 1, condScopeEnd)));
                                             yield new SQLQueryRowsNaturalJoinModel(
-                                                range, childNode, currSource, nextSource, isLateral,
+                                                range, childNode, currSource, nextSource, rightTableScope, isLateral,
                                                 r.collectColumnNameList(childNode), condScope.lexicalScope
                                             );
                                         }
@@ -216,6 +241,7 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                                             childNode,
                                             currSource,
                                             nextSource,
+                                            rightTableScope,
                                             isLateral,
                                             (List<SQLQuerySymbolEntry>) null,
                                             condScope.lexicalScope
@@ -224,7 +250,7 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                                 }
                             }
                             case SQLStandardParser.RULE_crossJoinTerm ->
-                                new SQLQueryRowsCrossJoinModel(range, childNode, currSource, nextSource, isLateral);
+                                new SQLQueryRowsCrossJoinModel(range, childNode, currSource, nextSource, rightTableScope, isLateral);
                             default -> throw new UnsupportedOperationException(
                                 "Unexpected child node kind at queryExpression: " + childNode.getNodeName());
                         };
@@ -237,6 +263,11 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
             if (cc.isEmpty()) {
                 return makeEmptyRowsModel(n);
             } else {
+                STMTreeNode firstTermChild = n.findFirstNonErrorChild() instanceof STMTreeTermNode t ? t : null; // FROM term
+                SQLQueryLexicalScope rightTableScope = firstTermChild != null ? new SQLQueryLexicalScope() : null;
+                if (firstTermChild != null) {
+                    rightTableScope.setInterval(Interval.of(firstTermChild.getRealInterval().b + 1, Integer.MAX_VALUE));
+                }
                 SubsourcesMap subsources = new SubsourcesMap(cc, n);
                 STMTreeNode firstChild = n.findFirstChildOfName(STMKnownRuleNames.tableReference);
                 List<STMTreeNode> restChilds = n.findChildrenOfName(STMKnownRuleNames.fromClauseTerm);
@@ -246,7 +277,7 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                     if (nextSource != null) {
                         Interval range = Interval.of(n.getRealInterval().a, childNode.getRealInterval().b);
                         boolean isLateral = childNode.findFirstChildOfName(STMKnownRuleNames.LATERAL_TERM) != null;
-                        source = new SQLQueryRowsCrossJoinModel(range, childNode, source, nextSource, isLateral);
+                        source = new SQLQueryRowsCrossJoinModel(range, childNode, source, nextSource, rightTableScope, isLateral);
                     } else {
                         // certain tableReference subtree was not recognized correctly, consider error message
                     }
@@ -262,7 +293,18 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
         },
         STMKnownRuleNames.nonjoinedTableReference, (n, cc, r) -> {
             // can they both be missing?
-            SQLQueryRowsSourceModel source = cc.isEmpty() ? r.collectTableReference(n, false) : cc.get(0);
+            STMTreeNode callNode = n.findFirstChildOfName(STMKnownRuleNames.functionCallExpression);
+            STMTreeNode tableNode = n.findFirstChildOfName(STMKnownRuleNames.tableName);
+            SQLQueryRowsSourceModel source;
+            if (!cc.isEmpty()) {
+                source = cc.getFirst();
+            } else if (tableNode != null) {
+                source = r.collectTableReference(tableNode, false);
+            } else if (callNode != null) {
+                source = new SQLQueryRowsTableProcModel(r.collectFunctionCall(callNode, null, true));
+            } else {
+                source = makeEmptyRowsModel(n);
+            }
 
             // TODO column reference at PARTITION clause
 
@@ -284,10 +326,40 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
         },
         STMKnownRuleNames.explicitTable, (n, cc, r) -> r.collectTableReference(n, false),
         STMKnownRuleNames.tableValueConstructor, (n, cc, r) -> {
-            List<SQLQueryValueExpression> values = n.findChildrenOfName(STMKnownRuleNames.rowValueConstructor).stream()
-                .map(r::collectValueExpression).toList();
-            boolean isIncomplete = n.getChildCount() != values.size() * 2 || n.hasErrorChildren();
-            return new SQLQueryRowsTableValueModel(n, values, isIncomplete);
+            List<STMTreeNode> rowNodes = n.findChildrenOfName(STMKnownRuleNames.rowValueConstructor);
+            boolean hasErrors = false;
+            List<List<SQLQueryValueExpression>> rows = new LinkedList<>();
+
+            for (STMTreeNode rowNode : rowNodes) {
+                STMTreeNode valueNode = rowNode.findFirstChildOfName(STMKnownRuleNames.rowValueConstructorElement);
+                if (valueNode != null) {
+                    hasErrors |= rowNode.hasErrorChildren() || valueNode.hasErrorChildren();
+                    STMTreeNode actualValueNode = valueNode.findFirstNonErrorChild();
+                    List<SQLQueryValueExpression> values = actualValueNode == null
+                        ? Collections.emptyList()
+                        : List.of(r.collectValueExpression(actualValueNode, null));
+                    rows.addLast(values);
+                } else {
+                    STMTreeNode rowValuesNode = rowNode.findFirstChildOfName(STMKnownRuleNames.rowValueConstructorList);
+                    if (rowValuesNode != null) {
+                        List<SQLQueryValueExpression> values = rowValuesNode.findChildrenOfName(
+                            STMKnownRuleNames.rowValueConstructorElement).stream()
+                                .map(en -> {
+                                    STMTreeNode vn = en.findFirstNonErrorChild();
+                                    return vn != null
+                                        ? r.collectValueExpression(vn, null)
+                                        : new SQLQueryValueFlattenedExpression(en, Collections.emptyList());
+                                }).toList();
+                        hasErrors |= rowNode.hasErrorChildren() || rowValuesNode.hasErrorChildren();
+                        rows.addLast(values);
+                    } else if (cc.isEmpty()) {
+                        rows.addLast(Collections.emptyList());
+                    } else {
+                        // TODO subquery as table-value rows source
+                    }
+                }
+            }
+            return new SQLQueryRowsTableValueModel(n, rows, hasErrors);
         }
     );
 
@@ -300,6 +372,11 @@ public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSou
                 STMTreeNode subrootChild = findImmediateChild(subroot, subquery.getSyntaxNode());
                 this.subsourceByNode.put(subrootChild, subquery);
             }
+        }
+
+        @Nullable
+        public SQLQueryRowsSourceModel getOrNull(@NotNull STMTreeNode subrootsChild) {
+            return this.subsourceByNode.get(subrootsChild);
         }
 
         @NotNull
